--- a/examples/2_getting_started.ipynb
+++ b/examples/2_getting_started.ipynb
@@ -7,8 +7,7 @@
     "# SBTi-Finance Tool - Quick Temperature Score Calculation\n",
     "This notebook provides a simple example of the SBTi-Finance Tool. It shows how to use it to calculate the temperature score for companies, aggregate them to a portfolio level to get the portoflio temperature score. It also shows you how to calculate the portfolio coverage. \n",
     "\n",
-    "Please see the [methodology, guidance](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) and the [technical documentation](http://getting-started.sbti-tool.org/) for more details. \n",
-    "\n",
+    "Please see the [methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf), [guidance](https://sciencebasedtargets.org/financial-institutions) and the [technical documentation](http://getting-started.sbti-tool.org/) for more details. \n",
     "\n",
     "See 1_analysis_example for more in depth example of how to work with Jupyter Notebooks in general and SBTi notebooks in particular. "
    ]
@@ -83,14 +82,7 @@
     "if not os.path.isfile(\"data/data_provider_example.xlsx\"):\n",
     "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/data_provider_example.xlsx\", \"data/data_provider_example.xlsx\")\n",
     "if not os.path.isfile(\"data/example_portfolio.csv\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")\n",
-    "if not os.path.isfile(\"utils.py\"):\n",
-    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/utils.py\", \"utils.py\")\n",
-    "    \n",
-    "try:  # Import statement when run in Google Colabs\n",
-    "    from utils import  print_aggregations\n",
-    "except:  # Import statement when run locally\n",
-    "    from examples.utils import  print_aggregations"
+    "    urllib.request.urlretrieve(\"https://github.com/OFBDABV/SBTi/raw/master/examples/data/example_portfolio.csv\", \"data/example_portfolio.csv\")"
    ]
   },
   {
@@ -201,7 +193,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>US0079031078</td>\n",
        "      <td>US0079031078</td>\n",
        "      <td>6.36%</td>\n",
@@ -210,7 +202,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Adobe Systems Inc.</td>\n",
+       "      <td>Company AH</td>\n",
        "      <td>US00724F1012</td>\n",
        "      <td>US00724F1012</td>\n",
        "      <td>1.82%</td>\n",
@@ -219,7 +211,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Capgemini Group</td>\n",
+       "      <td>Company AI</td>\n",
        "      <td>FR0000125338</td>\n",
        "      <td>FR0000125338</td>\n",
        "      <td>1.82%</td>\n",
@@ -228,7 +220,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Cisco Systems, Inc.</td>\n",
+       "      <td>Company AJ</td>\n",
        "      <td>US17275R1023</td>\n",
        "      <td>US17275R1023</td>\n",
        "      <td>1.82%</td>\n",
@@ -237,7 +229,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Coca-Cola HBC AG</td>\n",
+       "      <td>Company AK</td>\n",
        "      <td>CH0198251305</td>\n",
        "      <td>CH0198251305</td>\n",
        "      <td>1.82%</td>\n",
@@ -249,19 +241,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                  company_name    company_id  company_isin weights  \\\n",
-       "0  Advanced Micro Devices, Inc  US0079031078  US0079031078   6.36%   \n",
-       "1           Adobe Systems Inc.  US00724F1012  US00724F1012   1.82%   \n",
-       "2              Capgemini Group  FR0000125338  FR0000125338   1.82%   \n",
-       "3          Cisco Systems, Inc.  US17275R1023  US17275R1023   1.82%   \n",
-       "4             Coca-Cola HBC AG  CH0198251305  CH0198251305   1.82%   \n",
+       "  company_name    company_id  company_isin weights  investment_value  \\\n",
+       "0   Company AG  US0079031078  US0079031078   6.36%          35000000   \n",
+       "1   Company AH  US00724F1012  US00724F1012   1.82%          10000000   \n",
+       "2   Company AI  FR0000125338  FR0000125338   1.82%          10000000   \n",
+       "3   Company AJ  US17275R1023  US17275R1023   1.82%          10000000   \n",
+       "4   Company AK  CH0198251305  CH0198251305   1.82%          10000000   \n",
        "\n",
-       "   investment_value engagement_target  \n",
-       "0          35000000              True  \n",
-       "1          10000000               NaN  \n",
-       "2          10000000               NaN  \n",
-       "3          10000000               NaN  \n",
-       "4          10000000               NaN  "
+       "  engagement_target  \n",
+       "0              True  \n",
+       "1               NaN  \n",
+       "2               NaN  \n",
+       "3               NaN  \n",
+       "4               NaN  "
       ]
      },
      "execution_count": 6,
@@ -311,10 +303,10 @@
    },
    "outputs": [],
    "source": [
-    "temperature_score = TemperatureScore(\n",
-    "    time_frames=list(SBTi.interfaces.ETimeFrames), \n",
-    "    scopes=[EScope.S1S2, EScope.S3, EScope.S1S2S3],\n",
-    "    aggregation_method=PortfolioAggregationMethod.WATS\n",
+    "temperature_score = TemperatureScore(                  # all available options:\n",
+    "    time_frames=list(SBTi.interfaces.ETimeFrames),     # ETimeFrames: SHORT MID and LONG\n",
+    "    scopes=[EScope.S1S2, EScope.S3, EScope.S1S2S3],    # EScopes: S3, S1S2 and S1S2S3\n",
+    "    aggregation_method=PortfolioAggregationMethod.WATS # Options for the aggregation method are WATS, TETS, AOTS, MOTS, EOTS, ECOTS, and ROTS.\n",
     ")\n",
     "amended_portfolio = temperature_score.calculate(data_providers=[provider], portfolio=companies)"
    ]
@@ -365,63 +357,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>SHORT</td>\n",
        "      <td>S1S2</td>\n",
        "      <td>1.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>SHORT</td>\n",
        "      <td>S3</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>SHORT</td>\n",
        "      <td>S1S2S3</td>\n",
        "      <td>0.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>MID</td>\n",
        "      <td>S1S2</td>\n",
        "      <td>1.36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>MID</td>\n",
        "      <td>S3</td>\n",
        "      <td>3.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>MID</td>\n",
        "      <td>S1S2S3</td>\n",
        "      <td>2.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>LONG</td>\n",
        "      <td>S1S2</td>\n",
        "      <td>3.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>LONG</td>\n",
        "      <td>S3</td>\n",
        "      <td>3.20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Advanced Micro Devices, Inc</td>\n",
+       "      <td>Company AG</td>\n",
        "      <td>LONG</td>\n",
        "      <td>S1S2S3</td>\n",
        "      <td>3.20</td>\n",
@@ -431,16 +423,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                  company_name time_frame   scope  temperature_score\n",
-       "0  Advanced Micro Devices, Inc      SHORT    S1S2               1.30\n",
-       "1  Advanced Micro Devices, Inc      SHORT      S3               0.00\n",
-       "2  Advanced Micro Devices, Inc      SHORT  S1S2S3               0.35\n",
-       "3  Advanced Micro Devices, Inc        MID    S1S2               1.36\n",
-       "4  Advanced Micro Devices, Inc        MID      S3               3.20\n",
-       "5  Advanced Micro Devices, Inc        MID  S1S2S3               2.70\n",
-       "6  Advanced Micro Devices, Inc       LONG    S1S2               3.20\n",
-       "7  Advanced Micro Devices, Inc       LONG      S3               3.20\n",
-       "8  Advanced Micro Devices, Inc       LONG  S1S2S3               3.20"
+       "  company_name time_frame   scope  temperature_score\n",
+       "0   Company AG      SHORT    S1S2               1.30\n",
+       "1   Company AG      SHORT      S3               0.00\n",
+       "2   Company AG      SHORT  S1S2S3               0.35\n",
+       "3   Company AG        MID    S1S2               1.36\n",
+       "4   Company AG        MID      S3               3.20\n",
+       "5   Company AG        MID  S1S2S3               2.70\n",
+       "6   Company AG       LONG    S1S2               3.20\n",
+       "7   Company AG       LONG      S3               3.20\n",
+       "8   Company AG       LONG  S1S2S3               3.20"
       ]
      },
      "execution_count": 9,
@@ -457,38 +449,89 @@
    "metadata": {},
    "source": [
     "## Calculate the aggregated temperature score\n",
-    "Calculate an aggregated temperature score. This can be done using different aggregation methods. Here we'll use the \"Weighted Average Temperature Score\" (WATS) by initializing the TemperatureScore Object with PortfolioAggregationMethod.WATS. For more details, please refer to notebook 4 (\"4_portfolio_aggregations.ipynb\") and the methodology section **[replace with correct section]**. The termperature scores are calculated per time-frame/scope combination.\n"
+    "Calculate an aggregated temperature score. This can be done using different aggregation methods. Here we'll use the \"Weighted Average Temperature Score\" (WATS) by initializing the TemperatureScore Object with PortfolioAggregationMethod.WATS. For more details, please refer to notebook 4 (\"4_portfolio_aggregations.ipynb\") and the [methodology document](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) sections 3.2. The termperature scores are calculated per time-frame/scope combination.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_scores = temperature_score.aggregate_scores(amended_portfolio)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
+    "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Timeframe  Scope      Temp score\n",
-      "short      S1S2       2.54\n",
-      "short      S3         2.93\n",
-      "short      S1S2S3     2.83\n",
-      "mid        S1S2       2.63\n",
-      "mid        S3         2.98\n",
-      "mid        S1S2S3     2.88\n",
-      "long       S1S2       3.16\n",
-      "long       S3         3.23\n",
-      "long       S1S2S3     3.21\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>short</th>\n",
+       "      <th>mid</th>\n",
+       "      <th>long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>S1S2</th>\n",
+       "      <td>2.54</td>\n",
+       "      <td>2.63</td>\n",
+       "      <td>3.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S3</th>\n",
+       "      <td>2.93</td>\n",
+       "      <td>2.98</td>\n",
+       "      <td>3.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>S1S2S3</th>\n",
+       "      <td>2.83</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>3.21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        short   mid  long\n",
+       "S1S2     2.54  2.63  3.16\n",
+       "S3       2.93  2.98  3.23\n",
+       "S1S2S3   2.83  2.88  3.21"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print_aggregations(temperature_score.aggregate_scores(amended_portfolio))"
+    "# Here we cast a ScoreAggregation object to a Pandas Dataframe for viewing the temp scores in a human readable way\n",
+    "pd.DataFrame(aggregated_scores.dict()).applymap(lambda x: round(x['all']['score'], 2))"
    ]
   },
   {
@@ -498,12 +541,12 @@
     "## Portfolio coverage\n",
     "\n",
     "The portfolio coverage provides insights in the proportion of the portfolio that has set SBTi-approved GHG emissions reduction targets. Only companies with SBTi-status \"Approved\" are included in the portfolio coverage.\n",
-    "o calculate the portfolio coverage we use the same aggregation methods we use for the Portfolio Temperature Score. In this example we use the \"Weighted Average Temperature Score\" (WATS). For more details on aggregation methods and the portfolio coverage method, please refer to the [methodoloogy document](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) sections 3.2 and also turn to notebook 4 (\"4_portfolio_aggregations.ipynb\") for more aggregation examples."
+    "To calculate the portfolio coverage we use the same aggregation methods we use for the Portfolio Temperature Score. In this example we use the \"Weighted Average Temperature Score\" (WATS). For more details on aggregation methods and the portfolio coverage method, please refer to the [methodology document](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) sections 3.2 and also turn to notebook 4 (\"4_portfolio_aggregations.ipynb\") for more aggregation examples."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -511,20 +554,17 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "35.45"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Portfolio coverage is: 35.45%\n"
+     ]
     }
    ],
    "source": [
     "portfolio_coverage_tvp = PortfolioCoverageTVP()\n",
     "coverage = portfolio_coverage_tvp.get_portfolio_coverage(amended_portfolio.copy(), PortfolioAggregationMethod.WATS)\n",
-    "round(coverage * 100) / 100"
+    "print(\"Portfolio coverage is: {c:.2f}%\".format(c=coverage))"
    ]
   }
  ],
