--- a/examples/3_scenarios.ipynb
+++ b/examples/3_scenarios.ipynb
@@ -7,7 +7,7 @@
     "# SBTi-Finance Tool - What-if Analysis\n",
     "In this notebook we show you how to analyse what impact different actions would have on the temperature score of your portfolio.\n",
     "\n",
-    "Please see the [methodology, guidance](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf) and the [technical documentation](http://getting-started.sbti-tool.org/) for more details on the different what-if scenarios.\n",
+    "Please see the [methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf), [guidance](https://sciencebasedtargets.org/financial-institutions) and the [technical documentation](http://getting-started.sbti-tool.org/) for more details on the different what-if scenarios.\n",
     "\n",
     "See 1_analysis_example for more in depth example of how to work with Jupyter Notebooks in general and SBTi notebooks in particular. \n"
    ]
@@ -99,8 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_frames = list(SBTi.interfaces.ETimeFrames) \n",
-    "scopes = [EScope.S1S2, EScope.S3, EScope.S1S2S3]"
+    "# Set the time frames and scopes for the scoring          other options displayed below. in this NB we use MID and S1S2S3\n",
+    "time_frames = [SBTi.interfaces.ETimeFrames.MID]         # ETimeFrames: SHORT MID and LONG\n",
+    "scopes = [EScope.S1S2S3]                                # EScopes: S1, S2, S3, S1S2 and S1S2S3"
    ]
   },
   {
@@ -125,21 +126,20 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2.8756363636363633"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The portfolio's base scenario temperature score (mid - S1S2S3) is 2.88 degrees celcius\n"
+     ]
     }
    ],
    "source": [
     "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes)\n",
     "base_scenario = temperature_score.calculate(portfolio_data.copy())\n",
     "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
-    "base_scenario_aggregated.mid.S1S2S3.all.score"
+    "base_score = base_scenario_aggregated.mid.S1S2S3.all.score\n",
+    "scenarios.update({'Base Scenario': base_score})\n",
+    "print(\"The portfolio's base scenario temperature score (mid - S1S2S3) is {c:.2f} degrees celcius\".format(c=base_score))"
    ]
   },
   {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,19 +171,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The portfolio's scenario 1 temperature score (mid - S1S2S3) is 1.94 degrees Celsius\n"
+     ]
+    }
+   ],
    "source": [
     "temperature_score = TemperatureScore(time_frames=time_frames, scopes=scopes, scenario=scenario, aggregation_method=PortfolioAggregationMethod.WATS)\n",
     "scenario_one = temperature_score.calculate(portfolio_data.copy())\n",
-    "base_scenario_aggregated = temperature_score.aggregate_scores(base_scenario)\n",
-    "base_score = base_scenario_aggregated.mid.S1S2S3.all.score\n",
-    "scenarios.update({'Base Scenario': base_score})"
+    "scenario_aggregated = temperature_score.aggregate_scores(scenario_one)\n",
+    "scenario_1_score = scenario_aggregated.mid.S1S2S3.all.score\n",
+    "scenarios.update({'Scenario 1': scenario_1_score})\n",
+    "print(\"The portfolio's scenario 1 temperature score (mid - S1S2S3) is {c:.2f} degrees Celsius\".format(c=scenario_1_score))"
    ]
   },
   {
@@ -195,12 +204,12 @@
    },
    "source": [
     "## Scenario 2\n",
-    "In scenario 2 we engage with companies to influence them to set SBTi approved emissions reduction targets. This means that the maximum score for all targets will be capped at 1.75 degrees Celcius."
+    "In scenario 2 we engage with companies to influence them to set SBTi approved emissions reduction targets. This means that the maximum score for all targets will be capped at 1.75 degrees Celsius."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -224,7 +233,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.6257272727272722\n"
+      "The portfolio's scenario 2 temperature score (mid - S1S2S3) is 1.63 degrees Celsius\n"
      ]
     }
    ],
@@ -234,7 +243,7 @@
     "scenario_aggregated = temperature_score.aggregate_scores(scenario_two)\n",
     "scenario_2_score = scenario_aggregated.mid.S1S2S3.all.score\n",
     "scenarios.update({'Scenario 2': scenario_2_score})\n",
-    "print(scenario_2_score)\n"
+    "print(\"The portfolio's scenario 2 temperature score (mid - S1S2S3) is {c:.2f} degrees Celsius\".format(c=scenario_2_score))\n"
    ]
   },
   {
@@ -246,12 +255,12 @@
    },
    "source": [
     "## Scenario 3a\n",
-    "In scenario 3a we engage the top 10 contributing companies to the portfolio temperature score to influence them to set emission reduction targets. This means that their default score (i.e. the score when a company didn't set a target) will be set to 2 degrees celcius."
+    "In scenario 3a we engage the top 10 contributing companies to the portfolio temperature score to influence them to set emission reduction targets. This means that their default score (i.e. the score when a company didn't set a target) will be set to 2 degrees Celsius."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -275,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5413636363636365\n"
+      "The portfolio's scenario 3a temperature score (mid - S1S2S3) is 2.88 degrees Celsius\n"
      ]
     }
    ],
@@ -285,7 +294,7 @@
     "scenario_aggregated = temperature_score.aggregate_scores(scenario_two)\n",
     "scenario_3a_score = scenario_aggregated.mid.S1S2S3.all.score\n",
     "scenarios.update({'Scenario 3a': scenario_3a_score})\n",
-    "print(scenario_3a_score)"
+    "print(\"The portfolio's scenario 3a temperature score (mid - S1S2S3) is {c:.2f} degrees Celsius\".format(c=scenario_3a_score))"
    ]
   },
   {
@@ -297,12 +306,12 @@
    },
    "source": [
     "## Scenario 3b\n",
-    "In scenario 3b we engage the top 10 contributing companies to the portfolio temperature score to influence them to set SBTi-approved targets. This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees celcius."
+    "In scenario 3b we engage the top 10 contributing companies to the portfolio temperature score to influence them to set SBTi-approved targets. This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees Celsius."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -326,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4735454545454543\n"
+      "The portfolio's scenario 3b temperature score (mid - S1S2S3) is 2.88 degrees Celsius\n"
      ]
     }
    ],
@@ -336,7 +345,7 @@
     "scenario_aggregated = temperature_score.aggregate_scores(scenario_two)\n",
     "scenario_3b_score = scenario_aggregated.mid.S1S2S3.all.score\n",
     "scenarios.update({'Scenario 3b': scenario_3b_score})\n",
-    "print(scenario_3b_score)"
+    "print(\"The portfolio's scenario 3b temperature score (mid - S1S2S3) is {c:.2f} degrees Celsius\".format(c=scenario_3b_score))"
    ]
   },
   {
@@ -350,14 +359,14 @@
     "## Scenario 4a\n",
     "In scenario 4a we engage with any company in the portfolio to influence them to set emission reduction targets. We define these companies by adding \"`TRUE`\" in the `engagement_target`-column in the portfolio input-file. \n",
     "\n",
-    "This means that their default score (i.e. the score when a company didn't set a target) will be set to 2 degrees celcius.\n",
+    "This means that their default score (i.e. the score when a company didn't set a target) will be set to 2 degrees Celsius.\n",
     "\n",
     "Scenario 4a and 4b gives you a lot of flexibility, as you can define the companies with which you engage freely and for example focus your engagement efforts on certain sectors, countries, market cap buckets to ensure that you spend your time wisely. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -381,7 +390,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.7231818181818177\n"
+      "The portfolio's scenario 4a temperature score (mid - S1S2S3) is 2.72 degrees Celsius\n"
      ]
     }
    ],
@@ -391,7 +400,7 @@
     "scenario_aggregated = temperature_score.aggregate_scores(scenario_two)\n",
     "scenario_4a_score = scenario_aggregated.mid.S1S2S3.all.score\n",
     "scenarios.update({'Scenario 4a': scenario_4a_score})\n",
-    "print(scenario_4a_score)"
+    "print(\"The portfolio's scenario 4a temperature score (mid - S1S2S3) is {c:.2f} degrees Celsius\".format(c=scenario_4a_score))"
    ]
   },
   {
@@ -405,12 +414,12 @@
     "## Scenario 4b\n",
     "In scenario 4b we can engage with any company in the portfolio and manage to influence them to set SBTi-approved targets. We define these companies by adding \"`TRUE`\" in the `engagement_target`-column in the portfolio input-file. \n",
     "\n",
-    "This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees celcius."
+    "This means that the maximum score for all the targets of these companies will be capped at 1.75 degrees Celsius."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -434,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.690909090909091\n"
+      "The portfolio's scenario 4b temperature score (mid - S1S2S3) is 2.69 degrees Celsius\n"
      ]
     }
    ],
@@ -444,7 +453,7 @@
     "scenario_aggregated = temperature_score.aggregate_scores(scenario_two)\n",
     "scenario_4b_score = scenario_aggregated.mid.S1S2S3.all.score\n",
     "scenarios.update({'Scenario 4b': scenario_4b_score})\n",
-    "print(scenario_4b_score)"
+    "print(\"The portfolio's scenario 4b temperature score (mid - S1S2S3) is {c:.2f} degrees Celsius\".format(c=scenario_4b_score))"
    ]
   },
   {
@@ -456,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -467,20 +476,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scenario overview:\n",
-      "Base Scenario \t 2.88\n",
-      "Scenario 2 \t 1.63\n",
-      "Scenario 3a \t 2.54\n",
-      "Scenario 3b \t 2.47\n",
-      "Scenario 4a \t 2.72\n",
-      "Scenario 4b \t 2.69\n"
+      "                    Temp score\n",
+      "Scenario overview   (mid - S1S2S3):\n",
+      "Base Scenario       2.88\n",
+      "Scenario 1          1.94\n",
+      "Scenario 2          1.63\n",
+      "Scenario 3a         2.88\n",
+      "Scenario 3b         2.88\n",
+      "Scenario 4a         2.72\n",
+      "Scenario 4b         2.69\n"
      ]
     }
    ],
    "source": [
-    "print('Scenario overview:')\n",
+    "print('{:<20s}{}'.format('', 'Temp score'))\n",
+    "print('{:<20s}{}'.format('Scenario overview', '(mid - S1S2S3):'))\n",
     "for scenario, score in scenarios.items():\n",
-    "    print('{} \\t {:.2f}'.format(scenario, score))"
+    "    print('{:<20s}{:.2f}'.format(scenario, score))"
    ]
   }
  ],
