changed filenames and added colab and GH links to nbs

--- a/examples/3_what-if-analysis.ipynb
+++ b/examples/3_what-if-analysis.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Please see the [methodology](https://sciencebasedtargets.org/wp-content/uploads/2020/07/Temperature-Scoring-Beta-Methodology.pdf), [guidance](https://sciencebasedtargets.org/financial-institutions) and the [technical documentation](http://getting-started.sbti-tool.org/) for more details on the different what-if scenarios.\n",
     "\n",
-    "See 1_analysis_example for more in depth example of how to work with Jupyter Notebooks in general and SBTi notebooks in particular. \n"
+    "See 1_analysis_example (on [Colab](https://colab.research.google.com/github/OFBDABV/SBTi/blob/master/examples/1_analysis_example.ipynb) or [Github](https://github.com/OFBDABV/SBTi/blob/master/examples/1_analysis_example.ipynb)) for more in depth example of how to work with Jupyter Notebooks in general and SBTi notebooks in particular. \n"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "## Setting up\n",
     "First we will set up the imports, data providers, and load the portfolio. \n",
     "\n",
-    "For more examples of this process, please refer to notebook 1 & 2 (analysis and quick calculation example)."
+    "For more examples of this process, please refer to notebook 1 & 2 ([analysis](https://github.com/OFBDABV/SBTi/blob/master/examples/1_analysis_example.ipynb) and [quick calculation example](https://github.com/OFBDABV/SBTi/blob/master/examples/2_quick_temp_score_calculation.ipynb))."
    ]
   },
   {
@@ -517,10 +517,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
