--- a/examples/1_analysis_example.ipynb
+++ b/examples/1_analysis_example.ipynb
@@ -1779,7 +1779,7 @@
    "source": [
     "**Company temperature score contribution impact**\n",
     "\n",
-    "If our engagement is successful we can see that both Company Q and Company AM would disappear from from the list of biggest contributing companies to our TS."
+    "If our engagement is successful we can see that both Company Q and Company AM would move down the list of biggest contributing companies to our TS."
    ]
   },
   {
@@ -2134,7 +2134,7 @@
    "metadata": {},
    "source": [
     "If you run the SBTi tool locally or from Google Colab, you:\n",
-    "- Specify the filenames of the output files in the cell below\n",
+    "- Specify the filenames of the output files in the cell below, e.g. change 'data_dump.xlsx' in the first line to 'TS_output.xlsx'\n",
     "- Run the cell below"
    ]
   },
@@ -2187,10 +2187,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
